assert(current != first_mem) failed: corrupted memory graph in superword code

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • b12

      With test case:

      public class TestUnexpectedLoadOrdering {

          public static void main(String[] args) {
              double[] array1 = new double[1000];
              double[] array2 = new double[1000];
              for (int i = 0; i < 20_000; i++) {
                  test(array1, array2);
              }
          }

          private static double test(double[] array1, double[] array2) {
              double res = 0;
              for (int i = 0; i < array1.length; i++) {
                  array2[i] = i;
                  res += array1[i];
              }
              return res;
          }
      }

            Assignee:
            Roland Westrelin
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: