8201367: assert(current != first_mem) failed: corrupted memory graph in superword code

Don't rely on the RPO order to find the "first" and "last" loads of the pack

Reviewed-by: kvn